# MMDP-OD-RTDP-PROJECT

./: .gitignore  CHANGES_SOLVED_STOP.md  CHANGES_v7.md  CHANGES_v7_1.md  CODE_AUDIT.md  EXPERIMENT_DESIGN.md  MMDP-OD-RTDP-EXPERIMENT  MMDP-OD-RTDP-MAIN.ipynb  MMDP_Colab_One_Map_Per_Level.ipynb  MMDP_OD_RTDP_MAIN.ipynb  MMDP_V16_Colab_One_Map_Per_Level.ipynb  MMDP_results_final_report.csv  README.md  RUN_COLAB_HE.md  demo_flow.ipynb  demo_flow_standalone.ipynb  experiment_manifest_easy_time_60s.json  experiment_manifest_easy_time_or_solved_60s.json  experiment_manifest_easy_unconstrained.json  experiment_manifest_final_template.json  experiment_manifest_hard_time_60s.json  experiment_manifest_hard_time_or_solved_60s.json  experiment_manifest_hard_unconstrained.json  experiment_manifest_medium_time_60s.json  experiment_manifest_medium_time_or_solved_60s.json  experiment_manifest_medium_unconstrained.json  experiment_manifest_unconstrained_pilot.json  local_testing.ipynb  pyproject.toml  requirements.txt  run_all_time_60s.ps1  run_all_time_or_solved_60s.ps1  run_all_unconstrained.ps1  test_graphviz_png.py
docs/: EXPERIMENT_DESIGN.md  OUTPUTS.md
maps/: BUNDLED_MAPS_MANIFEST.json  MAPS_INCLUDED.md
scripts/: analyze_compact_results.py  run_compact_matrix.py  run_experiments.py
src/: baseline_rtdp.py  calibrate_resource_profiles.py  evaluation.py  experiment_profiles.py  experiments.py  generate_diagnostic_maps.py  grid_mmdp.py  heuristic.py  map_creator.py  notebook_visualizer.py  numerics.py  od_rtdp.py  paired_diagnostics.py  run_isolated_matrix.py  sandbox.py  (+2 more)
(+87 files in other folders)
