[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "mmdp"
version = "1.0.0"
description = "Baseline RTDP and OD-RTDP for stochastic multi-agent path finding"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "psutil>=5.9",
    "matplotlib>=3.7",
    "pandas>=2.0",
    "numpy>=1.24",
]

[project.optional-dependencies]
notebooks = [
    "ipywidgets>=8.0",
]
dev = [
    "pytest>=7.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
